# cross-platform-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  conanfile.py
.claude/: settings.json
docs/rules/: cmake-conventions.md
src/: main.cpp
test/lib_validation/: CMakeLists.txt
test/lib_validation/gui/: CMakeLists.txt
test/lib_validation/gui/advanced_docking/: CMakeLists.txt  main.cpp
test/lib_validation/gui/vtk_qt/: CMakeLists.txt  main.cpp
test/lib_validation/unit/: CMakeLists.txt  test_boost.cpp  test_eigen.cpp  test_fftw.cpp  test_gsl.cpp  test_instrumentortimer.cpp  test_log4qt.cpp  test_main.cpp  test_matio.cpp  test_opencv.cpp  test_qbreakpad.cpp  test_quazip.cpp
